# OpenSslClientWrapper

./: CMakeLists.txt  LICENSE  cert.pem  key.pem  main.cpp  open_ssl_client.cpp  open_ssl_client.h  start-server.sh
